--- a/package.json
+++ b/package.json
@@ -10,28 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.294.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
     "react-hook-form": "^7.48.2",
-    "react-toastify": "^9.1.3",
-    "framer-motion": "^10.16.5",
+    "react-qr-code": "^2.0.18",
+    "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
-    "lucide-react": "^0.294.0"
+    "react-toastify": "^9.1.3"
   },
-"devDependencies": {
-  "@types/react": "^18.2.37",
-  "@types/react-dom": "^18.2.15",
-  "@vitejs/plugin-react": "^4.7.0",
-  "@tailwindcss/vite": "^4.1.11",
-  "autoprefixer": "^10.4.16",
-  "eslint": "^8.53.0",
-  "eslint-plugin-react": "^7.33.2",
-  "eslint-plugin-react-hooks": "^4.6.0",
-  "eslint-plugin-tailwindcss": "beta",
-  "postcss": "^8.4.32",
-  "tailwindcss": "^4.1.11",
-  "vite": "^7.0.6"
-}
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "beta",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.6"
+  }
 }
